Put the flag options in a list. (ok deraadt@)

--- a/sbin/sysctl/sysctl.8
+++ b/sbin/sysctl/sysctl.8
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: sysctl.8,v 1.62 2001/05/11 06:40:01 angelos Exp $
+.\"	$OpenBSD: sysctl.8,v 1.63 2001/05/11 15:01:51 ho Exp $
 .\"	$NetBSD: sysctl.8,v 1.4 1995/09/30 07:12:49 thorpej Exp $
 .\"
 .\" Copyright (c) 1993
@@ -53,42 +53,39 @@
 .Fl aA
 .Sh DESCRIPTION
 The
-.Nm sysctl
+.Nm
 utility retrieves kernel state and allows processes with
 appropriate privilege to set kernel state.
 The state to be retrieved or set is described using a
 ``Management Information Base'' (``MIB'') style name,
 described as a dotted set of components.
-The
-.Fl a
-flag can be used to list all the currently available string or integer values.
-The
-.Fl A
-flag will list all the known MIB names including tables.
+
+The options are as follows:
+.Bl -tag -width xxx
+.It Fl a 
+list all the currently available string or integer values.
+.It Fl A
+list all the known MIB names including tables.
 Those with string or integer values will be printed as with the
 .Fl a
-flag; for the table values,
-the name of the utility to retrieve them is given.
-.Pp
-The
-.Fl n
-flag specifies that the printing of the field name should be
-suppressed and that only its value should be output.
-This flag is useful for setting shell variables.
-For example, to save the pagesize in variable psize, use:
+flag; for the table values, the name of the utility to retrieve them is given.
+.It Fl n
+suppress printing of the field name, only output the field value.
+Useful for setting shell variables.
+For example:
 .Bd -literal -offset indent -compact
 set psize=`sysctl -n hw.pagesize`
 .Ed
 .Pp
 If just a MIB style name is given,
 the corresponding value is retrieved.
-If a value is to be set, the
-.Fl w
-flag must be specified and the MIB name followed
-by an equal sign and the new value to be used.
+.It Fl w
+required to set a variable. The MIB name should be followed
+by an equal sign and the new value.
+.El
 .Pp
 The information available from
-.Nm sysctl
+.Nm
 consists of integers, strings, and tables.
 The tabular information can only be retrieved by special
 purpose programs such as
@@ -295,7 +292,7 @@ privilege can change the value.
 .El
 .Pp
 The
-.Nm sysctl
+.Nm
 program can get or set debugging variables
 that have been identified for its display.
 This information can be obtained by using the command:
@@ -303,7 +300,7 @@ This information can be obtained by using the command:
 sysctl debug
 .Ed
 In addition,
-.Nm sysctl
+.Nm
 can extract information about the filesystems that have been compiled
 into the running system.
 This information can be obtained by using the command:
