--- a/sbin/brconfig/brconfig.8
+++ b/sbin/brconfig/brconfig.8
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: brconfig.8,v 1.23 2001/03/26 05:37:28 aaron Exp $
+.\"	$OpenBSD: brconfig.8,v 1.24 2001/05/14 02:43:12 jason Exp $
 .\"
 .\" Copyright (c) 1999, 2000 Jason L. Wright (jason@thought.net)
 .\" All rights reserved.
@@ -338,9 +338,9 @@ The internal interface, ie. fxp1, on each bridge need not have an IP
 address; the bridge can function without it.
 .Pp
 Note:  It is possible to put all the following commands in the
-.Xr hostname.if 8
+.Xr hostname.if 5
 and
-.Xr bridgename.if 8
+.Xr bridgename.if 5
 files, using the ! operator.
 .Sh SPANNING TREE
 The bridge has support for 802.1D Spanning Tree Protocol (STP), which can
