--- a/share/man/man4/hifn.4
+++ b/share/man/man4/hifn.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: hifn.4,v 1.12 2001/03/01 16:11:16 aaron Exp $
+.\"	$OpenBSD: hifn.4,v 1.13 2001/05/14 09:02:55 deraadt Exp $
 .\"
 .\" Copyright (c) 2000 Theo de Raadt
 .\" All rights reserved.
@@ -31,7 +31,7 @@
 .Os
 .Sh NAME
 .Nm hifn
-.Nd Hi/fn 7751 symmetric encryption accelerator
+.Nd Hi/fn 7751 symmetric crypto accelerator
 .Sh SYNOPSIS
 .Cd "hifn* at pci? dev ? function ?"
 .Sh DESCRIPTION
