--- a/share/man/man4/ubsec.4
+++ b/share/man/man4/ubsec.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: ubsec.4,v 1.6 2001/03/01 16:11:19 aaron Exp $
+.\"	$OpenBSD: ubsec.4,v 1.7 2001/05/14 09:02:58 deraadt Exp $
 .\"
 .\" Copyright (c) 2000 Jason L. Wright (jason@thought.net)
 .\" All rights reserved.
@@ -34,7 +34,7 @@
 .Os
 .Sh NAME
 .Nm ubsec
-.Nd Broadcom (BlueSteel) uBsec 5x0x encryption accelerator
+.Nd Broadcom (BlueSteel) uBsec 5x0x crypto accelerator
 .Sh SYNOPSIS
 .Cd "ubsec* at pci? dev ? function ?"
 .Sh DESCRIPTION
