--- a/share/man/man4/pci.4
+++ b/share/man/man4/pci.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: pci.4,v 1.35 2001/04/16 02:08:14 jason Exp $
+.\"	$OpenBSD: pci.4,v 1.36 2001/05/14 14:40:49 jason Exp $
 .\"	$NetBSD: pci.4,v 1.29 2000/04/01 00:32:23 tsarna Exp $
 .\"
 .\" Copyright (c) 2000 Theo de Raadt.  All rights reserved.
@@ -220,7 +220,7 @@ Intel Gigabit Ethernet interfaces.
 Hi/fn 7751
 Symmetric Encryption Accelerator.
 .It Xr ubsec 4
-Broadcom Bluesteelnet uBsec 5501, 5601, and 5805.
+Broadcom Bluesteelnet uBsec 5501, 5601, 5805, and 5820.
 .It Xr ises 4
 Pijnenburg PCC-ISES hardware crypto accelerator.
 .El
