--- a/share/man/man4/isa.4
+++ b/share/man/man4/isa.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: isa.4,v 1.4 2000/04/11 14:08:03 aaron Exp $
+.\"	$OpenBSD: isa.4,v 1.5 2001/05/14 14:44:41 jason Exp $
 .\"	$NetBSD: isa.4,v 1.19 2000/03/18 16:54:37 augustss Exp $
 .\"
 .\" Copyright (c) 2000 Theo de Raadt.  All rights reserved.
@@ -150,6 +150,10 @@ IBM RT four-port serial cards.
 .Bl -tag -width speaker -offset ind
 .It Xr ec 4
 3Com Etherlink II (3c503)
+.Tn Ethernet
+interfaces.
+.It Xr ef 4
+3Com Fast Etherlink III (3c515)
 .Tn Ethernet
 interfaces.
 .It Xr eg 4
