--- a/share/man/man4/pckbd.4
+++ b/share/man/man4/pckbd.4
@@ -1,4 +1,4 @@
-.\" $OpenBSD: pckbd.4,v 1.3 2001/03/27 22:44:54 aaron Exp $
+.\" $OpenBSD: pckbd.4,v 1.4 2001/05/14 16:54:26 mickey Exp $
 .\" $NetBSD: pckbd.4,v 1.3 1999/12/21 11:31:07 drochner Exp $
 .\"
 .Dd March 20, 1999
@@ -35,41 +35,51 @@ Other mappings can be used if the whole keymap is replaced by means of
 .Xr wsconsctl 8 .
 The built-in mappings are at this time:
 .Bl -hang
-.It KB_US
-(for wsconsctl:
-.Dq us
-) English / US keyboard mapping (default).
 .It KB_DE
 (
 .Dq de
 ) German with
 .Dq dead accents .
-.It KB_FR
-(
-.Dq fr
-) French.
 .It KB_DK
 (
 .Dq dk
 ) Danish with
 .Dq dead accents .
+.It KB_FR
+(
+.Dq fr
+) French.
 .It KB_IT
 (
 .Dq it
 ) Italian.
-.It KB_UK
-(
-.Dq uk
-) British.
 .It KB_JP
 (
 .Dq jp
 ) Japanese.
+.It KB_RU
+(
+.Dq ru
+) Russian in
+.Dq KOI8 .
+.It KB_SG
+(
+.Dq sg
+) Swiss German with
+.Dq dead accents .
 .It KB_SV
 (
 .Dq sv
 ) Swedish with
 .Dq dead accents .
+.It KB_UK
+(
+.Dq uk
+) British.
+.It KB_US
+(for wsconsctl:
+.Dq us
+) English / US keyboard mapping (default).
 .It KB_US | KB_DECLK
 (
 .Dq us.declk
@@ -120,6 +130,7 @@ To set it at kernel build time, add
 to the kernel configuration file.
 .Sh SEE ALSO
 .Xr isa 4 ,
+.Xr pckbc 4 ,
 .Xr pcppi 4 ,
 .Xr wskbd 4 ,
 .Xr wsconsctl 8
