--- a/share/man/man4/pckbd.4
+++ b/share/man/man4/pckbd.4
@@ -1,4 +1,4 @@
-.\" $OpenBSD: pckbd.4,v 1.4 2001/05/14 16:54:26 mickey Exp $
+.\" $OpenBSD: pckbd.4,v 1.5 2001/05/14 16:57:22 deraadt Exp $
 .\" $NetBSD: pckbd.4,v 1.3 1999/12/21 11:31:07 drochner Exp $
 .\"
 .Dd March 20, 1999
@@ -101,7 +101,7 @@ This switches off the
 .Dq dead accents .
 .Pp
 The KB_US, KB_JP and KB_US | KB_DVORAK mappings can be modified
-to swap the left CNTL	and the CAPS LOCK keys by the
+to swap the left CNTL and the CAPS LOCK keys by the
 KB_SWAPCTRLCAPS variant bit or the
 .Dq .swapctrlcaps
 suffix.
