--- a/share/man/man4/eap.4
+++ b/share/man/man4/eap.4
@@ -1,4 +1,4 @@
-.\" $OpenBSD: eap.4,v 1.7 2000/12/21 21:01:16 aaron Exp $
+.\" $OpenBSD: eap.4,v 1.8 2001/05/17 02:10:29 brad Exp $
 .\" $NetBSD: eap.4,v 1.2 1998/05/06 19:14:06 augustss Exp $
 .\"
 .\" Copyright (c) 1997 The NetBSD Foundation, Inc.
@@ -45,7 +45,7 @@
 The
 .Nm
 driver supports the older Ensoniq AudioPCI and other ES1370 based
-sound cards, as well as the Creative Labs SoundBlaster 128PCI.
+sound cards, as well as the Creative Labs SoundBlaster PCI128.
 The driver also supports many revisions of the more modern Ensoniq
 AudioPCI 97 (ES1371).
 .Sh SEE ALSO
