--- a/share/man/man4/ises.4
+++ b/share/man/man4/ises.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: ises.4,v 1.2 2001/05/17 02:17:11 brad Exp $
+.\"	$OpenBSD: ises.4,v 1.3 2001/05/17 20:48:04 brad Exp $
 .\"
 .\" Copyright (c) 2000 Håkan Olsson (ho@crt.se)
 .\" All rights reserved.
@@ -41,10 +41,7 @@ driver supports cards containing the Pijnenburg PCC-ISES chipset.
 .Pp
 The
 .Nm
-driver registers itself to accelerate DES, Triple-DES, MD5-HMAC96,
-SHA1-HMAC96 and RMD160-HMAC96 operations in
-.Xr ipsec 4 ,
-as well as provide strong random data to the
+driver at the moment only provides strong random data to the
 .Xr random 4
 subsystem.
 .Sh BUGS
@@ -52,10 +49,7 @@ The cryptographic functions are not yet supported.
 Also not yet supported are the chip's two LNAUs (Large Number Arithmetic
 Units), which would be useful in OpenSSL applications.
 .Sh SEE ALSO
-.Xr crypt 3 ,
-.Xr ipsec 4 ,
 .Xr random 4
-.Xr crypto 9 ,
 .Sh HISTORY
 The
 .Nm
