--- a/usr.sbin/wsfontload/wsfontload.8
+++ b/usr.sbin/wsfontload/wsfontload.8
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: wsfontload.8,v 1.7 2001/05/01 17:44:35 aaron Exp $
+.\"	$OpenBSD: wsfontload.8,v 1.8 2001/05/18 17:03:53 mickey Exp $
 .\"	$NetBSD: wsfontload.8,v 1.5 1999/04/06 04:54:22 cgd Exp $
 .\"
 .Dd January 13, 1999
@@ -111,8 +111,10 @@ This (or another 8x8-font) is necessary to use the 50-line screen type on
 displays.
 .Sh FILES
 .Bl -tag -width /etc/wscons.conf -compact
-.It Pa /etc/wscons.conf
-wscons configuration file
+.\" .It Pa /etc/wscons.conf
+.\" wscons configuration file
+.It Pa /usr/share/misc/pcvtfonts/
+fonts directory.
 .El
 .Sh SEE ALSO
 .Xr wscons 4 ,
