wscons.conf no more; pointed out by Alexander Yurchenko <grange@rt.mipt.ru>

--- a/usr.sbin/wsconscfg/wsconscfg.8
+++ b/usr.sbin/wsconscfg/wsconscfg.8
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: wsconscfg.8,v 1.7 2001/03/27 22:44:55 aaron Exp $
+.\"	$OpenBSD: wsconscfg.8,v 1.8 2001/05/18 17:05:05 mickey Exp $
 .\"	$NetBSD: wsconscfg.8,v 1.5 1999/05/15 14:45:06 drochner Exp $
 .\"
 .Dd January 12, 1999
@@ -113,11 +113,11 @@ See
 .Cm wsconscfg -k
 .Pp
 Connect the first unconnected keyboard to the display.
-.Sh FILES
-.Bl -tag -width /etc/wscons.conf -compact
-.It Pa /etc/wscons.conf
-wscons configuration file
-.El
+.\" .Sh FILES
+.\" .Bl -tag -width /etc/wscons.conf -compact
+.\" .It Pa /etc/wscons.conf
+.\" wscons configuration file
+.\" .El
 .Sh SEE ALSO
 .Xr wscons 4 ,
 .Xr wsconsctl 8 ,
