--- a/usr.sbin/named/man/named.8
+++ b/usr.sbin/named/man/named.8
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: named.8,v 1.9 1999/06/05 22:17:40 aaron Exp $
+.\"	$OpenBSD: named.8,v 1.10 2001/05/18 17:22:14 aaron Exp $
 .\" ++Copyright++ 1985
 .\" -
 .\" Copyright (c) 1985
@@ -143,7 +143,7 @@ specified may be either a groupname or a numeric group ID.
 .TP
 .B \-t
 Specifies the directory the server should chroot() into as soon as it is
-finshed processing command line arguments.
+finished processing command line arguments.
 .PP
 Any additional argument is taken as the name of the boot file.
 If multiple boot files are specified, only the last is used.
