--- a/share/man/man3/queue.3
+++ b/share/man/man3/queue.3
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: queue.3,v 1.16 2001/03/01 16:11:14 aaron Exp $
+.\"	$OpenBSD: queue.3,v 1.17 2001/05/18 17:23:46 aaron Exp $
 .\"	$NetBSD: queue.3,v 1.4 1995/07/03 00:25:36 mycroft Exp $
 .\"
 .\" Copyright (c) 1993 The Regents of the University of California.
@@ -708,7 +708,7 @@ The elements are doubly linked so that an arbitrary element can be
 removed without traversing the tail queue.
 New elements can be added to the queue after an existing element,
 before an existing element, at the head of the queue, or at the end
-the queue.
+of the queue.
 A
 .Fa TAILQ_HEAD
 structure is declared as follows:
