--- a/usr.sbin/mrinfo/mrinfo.8
+++ b/usr.sbin/mrinfo/mrinfo.8
@@ -1,85 +1,81 @@
+.\"	$OpenBSD: mrinfo.8,v 1.3 2001/05/22 11:14:07 ho Exp $
 .\"	$NetBSD: mrinfo.8,v 1.2 1995/10/03 23:20:39 thorpej Exp $
 .\"
-.TH MRINFO 8
-.UC 5
-.SH NAME
-mrinfo \- Displays configuration info from a multicast router
-.SH SYNOPSIS
-.B /usr/sbin/mrinfo
-[
-.B \-d
-.I debug_level
-] [
-.B \-r
-.I retry_count
-] [
-.B \-t
-.I timeout_count
-]
-.B multicast_router
-
-.SH DESCRIPTION
-.I mrinfo
-attempts to display the configuration information from the multicast router
-.I multicast_router.
-.PP
-.I mrinfo
-uses the ASK_NEIGHBORS IGMP message to the specified multicast router. If this
-multicast router responds, the version number and a list of their neighboring
-multicast router addresses is part of that response. If the responding router
-has a recent multicast version number, then
-.I mrinfo
+.Dd May 8, 1995
+.Dt mrinfo 8
+.Os
+.Sh NAME
+.Nm mrinfo 
+.Nd displays configuration info from a multicast router
+.Sh SYNOPSIS
+.Nm mrinfo
+.Op Fl d Ar debug_level
+.Op Fl r Ar retry_count
+.Op Fl t Ar timeout_count
+.Ar multicast_router
+.Sh DESCRIPTION
+.Nm
+attempts to display the configuration information from the specified
+.Ar multicast_router .
+.Pp
+.Nm
+uses the ASK_NEIGHBORS IGMP message to the specified multicast
+router. If it router responds, the version number and a list of their
+neighboring multicast router addresses is part of the response.
+If the responding router has a recent multicast version number, then
+.Nm
 requests additional information such as metrics, thresholds, and flags from the
 multicast router. Once the specified multicast router responds, the
 configuration is displayed to the standard output.
-.br
-.ne 5
-.SH INVOCATION
-.PP
-"\-d" option sets the debug level. When the debug level is greater than the
-default value of 0, addition debugging messages are printed. Regardless of
-the debug level, an error condition, will always write an error message and will
+.Pp
+The options are as follows:
+.Pp
+.Bl -tag -width timeout_levelxyz
+.It Fl d Ar debug_level
+sets the debug level. When the debug level is greater than the
+default value of 0, additional debugging messages are printed. Regardless of
+the debug level, an error condition will always write an error message and 
 cause
-.I mrinfo
+.Nm
 to terminate.
-Non-zero debug levels have the following effects:
-.IP "level 1"
-packet warnings are printed to stderr.
-.IP "level 2"
-all level 1 messages plus notifications down networks are printed to stderr.
-.IP "level 3"
-all level 2 messages plus notifications of all packet
-timeouts are printed to stderr.
-.PP
-"\-r retry_count" sets the neighbor query retry limit. Default is 3 retry.
-.PP
-"\-t timeout_count" sets the number of seconds to wait for a neighbor query
-reply. Default timeout is 4 seconds.
-.PP
-.SH SAMPLE OUTPUT
-.nf
-.I mrinfo mbone.phony.dom.net
+Non-zero debug levels have the following effects (printed to stderr):
+.Pp
+.Bl -tag -width 1n -compact -offset indent
+.It 1
+packet warnings.
+.It 2
+all level 1 messages plus notifications of down networks.
+.It 3
+all level 2 messages plus notifications of all packet timeouts.
+.El
+.It Fl r Ar retry_count
+sets the neighbor query retry limit. The default is to do 3 retries.
+.It Fl t Ar timeout_count
+sets the number of seconds to wait for a neighbor query
+reply. The default timeout is 4 seconds.
+.El
+.Sh EXAMPLES
+.Pp
+.Bd -literal
+# mrinfo mbone.phony.dom.net
 127.148.176.10 (mbone.phony.dom.net) [version 3.3]:
  127.148.176.10 -> 0.0.0.0 (?) [1/1/querier]
  127.148.176.10 -> 127.0.8.4 (mbone2.phony.dom.net) [1/45/tunnel]
  127.148.176.10 -> 105.1.41.9 (momoney.com) [1/32/tunnel/down]
  127.148.176.10 -> 143.192.152.119 (mbone.dipu.edu) [1/32/tunnel]
-.fi
-.PP
+.Ed
+.Pp
 For each neighbor of the queried multicast router, the IP of the queried router
 is displayed, followed by the IP and name of the neighbor. In square brackets
-the metric (cost of connection), the treashold (multicast ttl) is displayed. If
+the metric (cost of connection), the threshold (multicast ttl) is displayed. If
 the queried multicast router has a newer version number, the type (tunnel,
 srcrt) and status (disabled, down) of the connection is displayed.
-.PP
-.SH IMPORTANT NOTE
-.I mrinfo
-must be run as root.
-.PP
-.SH SEE ALSO
-.BR mrouted (8) ,
-.BR map-mbone (8) ,
-.BR mtrace (8)
-.PP
-.SH AUTHOR
+.Sh SEE ALSO
+.Xr mrouted 8 ,
+.Xr map-mbone 8 ,
+.Xr mtrace 8
+.Sh AUTHOR
 Van Jacobson
+.Sh CAVEATS
+.Nm
+must be run as root.
