Some fixes. From <mpech@prosoft.org.lv>

--- a/usr.sbin/mtrace/mtrace.8
+++ b/usr.sbin/mtrace/mtrace.8
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: mtrace.8,v 1.5 2001/05/22 11:15:30 ho Exp $
+.\"	$OpenBSD: mtrace.8,v 1.6 2001/05/22 15:18:18 ho Exp $
 .\"	$NetBSD: mtrace.8,v 1.4 1995/12/10 10:57:11 mycroft Exp $
 .\"
 .\" Copyright (c) 1995 by the University of Southern California
@@ -33,7 +33,7 @@
 .\" All rights reserved.
 .\"
 .Dd May 8, 1995
-.Dt mtrace 8
+.Dt MTRACE 8
 .Os
 .Sh NAME
 .Nm mtrace
@@ -442,9 +442,9 @@ Querying full reverse path... * switching to hop-by-hop:
 Round trip time 95 ms
 .Ed
 .Sh SEE ALSO
-.Xr mrouted 8 ,
-.Xr mrinfo 8 ,
 .Xr map-mbone 8 ,
+.Xr mrinfo 8 ,
+.Xr mrouted 8 ,
 .Xr traceroute 8
 .Sh BUGS
 Versions 3.3 and 3.5 of
