--- a/usr.sbin/mrinfo/mrinfo.8
+++ b/usr.sbin/mrinfo/mrinfo.8
@@ -1,8 +1,8 @@
-.\"	$OpenBSD: mrinfo.8,v 1.3 2001/05/22 11:14:07 ho Exp $
+.\"	$OpenBSD: mrinfo.8,v 1.4 2001/05/22 15:18:18 ho Exp $
 .\"	$NetBSD: mrinfo.8,v 1.2 1995/10/03 23:20:39 thorpej Exp $
 .\"
 .Dd May 8, 1995
-.Dt mrinfo 8
+.Dt MRINFO 8
 .Os
 .Sh NAME
 .Nm mrinfo 
@@ -71,8 +71,8 @@ the metric (cost of connection), the threshold (multicast ttl) is displayed. If
 the queried multicast router has a newer version number, the type (tunnel,
 srcrt) and status (disabled, down) of the connection is displayed.
 .Sh SEE ALSO
-.Xr mrouted 8 ,
 .Xr map-mbone 8 ,
+.Xr mrouted 8 ,
 .Xr mtrace 8
 .Sh AUTHOR
 Van Jacobson
