Reword HISTORY section.

--- a/share/man/man4/txp.4
+++ b/share/man/man4/txp.4
@@ -1,4 +1,4 @@
-.\"     $OpenBSD: txp.4,v 1.4 2001/05/08 05:11:33 jason Exp $
+.\"     $OpenBSD: txp.4,v 1.5 2001/05/24 19:12:18 aaron Exp $
 .\"
 .\" Copyright (c) 2001 Jason L. Wright (jason@thought.net)
 .\" All rights reserved.
@@ -118,8 +118,7 @@ Use 10baseT, half duplex
 .Xr vlan 4 ,
 .Xr ifconfig 8
 .Sh HISTORY
-.Ox
-support for the
+The
 .Nm
-first appeared in
+driver first appeared in
 .Ox 2.9 .
