Various fixes; mpech@prosoft.org.lv

--- a/bin/ed/ed.1
+++ b/bin/ed/ed.1
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: ed.1,v 1.29 2000/11/09 23:58:55 aaron Exp $
+.\"	$OpenBSD: ed.1,v 1.30 2001/05/28 15:36:08 aaron Exp $
 .\"
 .Dd May 2, 1993
 .Dt ED 1
@@ -647,7 +647,7 @@ The
 .Em n
 suffix, where
 .Em n
-is a postive number, causes only the
+is a positive number, causes only the
 .Em n Ns No th
 match to be replaced.
 It is an error if no substitutions are performed on any of the addressed
