--- a/share/man/man4/wskbd.4
+++ b/share/man/man4/wskbd.4
@@ -1,4 +1,4 @@
-.\" $OpenBSD: wskbd.4,v 1.3 2001/03/27 22:44:55 aaron Exp $
+.\" $OpenBSD: wskbd.4,v 1.4 2001/05/28 15:50:11 aaron Exp $
 .\" $NetBSD: wskbd.4,v 1.5 2000/03/20 11:51:59 pk Exp $
 .\"
 .Dd March 20, 1999
@@ -9,19 +9,8 @@
 .Nd generic keyboard support in wscons
 .Sh SYNOPSIS
 .Cd "wskbd* at pckbd? console ? mux 1"
-(standard PC keyboard)
 .Cd "wskbd* at ukbd? console ? mux 1"
-(USB keyboard)
-.Cd "wskbd* at lkkbd? console ? mux 1"
-(DEC LK200/400 serial keyboard)
 .Cd "wskbd0 at akbd? console ? mux 1"
-(Apple ADB keyboard)
-.Cd "wskbd0 at nextkbd? console ? mux 1"
-(NeXT keyboard)
-.Cd "wskbd* at vrkiu? console ? mux 1"
-(NEC VR4000 series HPC keyboard)
-.Cd "wskbd* at skbd? console ? mux 1"
-(keyboard of misc hpcmips handheld devices)
 .Sh DESCRIPTION
 The
 .Nm
@@ -38,8 +27,7 @@ The common keyboard support consists of:
 .It
 Mapping from keycodes (defined by the specific keyboard driver) to
 keysyms (hardware independent, defined in
-.Pa /usr/include/dev/wscons/wsksymdef.h
-).
+.Pa /usr/include/dev/wscons/wsksymdef.h ) .
 .It
 Handling of
 .Dq compose
@@ -57,9 +45,8 @@ modifier into an
 .Dq ESC
 prefix.
 .It
-Automatic key repetition (
-.Dq typematic
-).
+Automatic key repetition
+.Pf ( Dq typematic ) .
 .It
 Parameter handling for
 .Dq keyboard bells .
@@ -100,7 +87,7 @@ device instance.
 .El
 .Sh SEE ALSO
 .Xr wscons 4 ,
-.Xr wsconsctl 8 ,
 .Xr wsmux 4 ,
 .Xr pckbd 4 ,
-.Xr ukbd 4
+.Xr ukbd 4 ,
+.Xr wsconsctl 8
